--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -3,17 +3,15 @@ name: Playwright Tests with Allure
 on:
   push:
     branches: [main, master]
-  pull_request:
-    branches: [main, master]
 
 jobs:
   test:
-    timeout-minutes: 60
     runs-on: ubuntu-latest
+    timeout-minutes: 60
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -23,19 +21,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Install Playwright browsers
+      - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      - name: Run Playwright tests with Allure
+      - name: Run Playwright Tests with Allure
         run: npx playwright test --reporter=line,allure-playwright
 
-      - name: Generate Allure report
-        run: npx allure generate ./allure-results --clean -o ./allure-report
-
-      - name: Upload Allure report
-        if: always()
+      - name: Upload Allure Results
         uses: actions/upload-artifact@v3
         with:
-          name: allure-report
-          path: allure-report
-          retention-days: 32
+          name: allure-results
+          path: ./allure-results
