--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,14 +21,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Install Playwright Browsers
+      - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
-      - name: Run Playwright Tests with Allure
+      - name: Run Playwright tests with Allure
         run: npx playwright test --reporter=line,allure-playwright
 
-      - name: Upload Allure Results
-        uses: actions/upload-artifact@v3
+      - name: Upload Allure results
+        uses: actions/upload-artifact@v2
         with:
           name: allure-results
           path: ./allure-results
