--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -42,3 +42,14 @@ jobs:
 
       - name: Run only Calendar.spec.js test
         run: npx playwright test tests/Calendar.spec.js --reporter=line,allure-playwright
+
+      - name: Generate Allure HTML report
+        run: |
+          npm install -g allure-commandline --save-dev
+          allure generate ./allure-results --clean -o ./allure-report
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./allure-report
