--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -43,13 +43,31 @@ jobs:
       - name: Run only Calendar.spec.js test
         run: npx playwright test tests/Calendar.spec.js --reporter=line,allure-playwright
 
-      - name: Generate Allure HTML report
-        run: |
-          npm install -g allure-commandline --save-dev
-          allure generate ./allure-results --clean -o ./allure-report
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        # Загрузка старой истории отчетов из gh-pages
+      - name: Get Allure history
+        uses: actions/checkout@v2
+        if: always()
+        continue-on-error: true
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./allure-report
+          ref: gh-pages
+          path: gh-pages
+
+      # Генерация отчета с историей
+      - name: Generate Allure Report
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        id: allure-report
+        with:
+          allure_results: ./allure-results
+          gh_pages: gh-pages
+          allure_report: allure-report
+          allure_history: allure-history
+
+      # Публикация на GitHub Pages
+      - name: Deploy Allure report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v2
+        if: always()
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: allure-history
