--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -71,3 +71,7 @@ jobs:
           PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
+
+      - name: Print Allure report link
+        if: always()
+        run: echo "👉 [Открыть Allure отчет](https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/)" >> $GITHUB_STEP_SUMMARY
